Changed some file links and applied a "Temporary" fix to the missing background image.

--- a/styles/Styles.css
+++ b/styles/Styles.css
@@ -36,7 +36,7 @@ a {
 
 /* Added Background Image to Landing Page */
 body {
-  background-image: url(background-Image.jpg);
+  background-image: url(./images/background-Image.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
